# tabflow

./: .gitignore  README.md  pyproject.toml  work.ipynb
.github/workflows/: ci.yml
src/tabflow/: __init__.py  page.py  tab.py
tests/: test_page.py  test_tab.py
